<resources>
    <string name="app_name">Exap | اكسب</string>
    <string name="facebook_app_id">1108744365854962</string>
    <string name="percent_sign"> % - </string>
    <string name="percent_off">off</string>
    <string name="title">Lorem ipsum</string>
    <string name="title_separator">|</string>
    <string name="title_left">EXAP</string>
    <string name="title_right">اكسب</string>
    <string name="category_deal_title">Category Deal</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="please_enter_username">Please enter username</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="login_terms">By using EXAP , you agree to EXAP</string>
    <string name="terms_use"> <a href="https://www.exap.sa/beta/terms-conditions?lang=eng">Terms of Use</a></string>
    <string name="and">and</string>
    <string name="private_policy"><a href="https://www.exap.sa/beta/privacy-policy?lang=eng">Privacy Poilcy</a></string>
    <string name="terms_of_use">Terms of use &lt;a href=\&quot;https://www.exap.sa/beta/terms-conditions?lang=eng\&quot;&gt;link1&lt;/a></string>
    <string name="login_terms_and_conditions">By using EXAP , you agree to EXAP
        <a href="https://www.exap.sa/beta/terms-conditions?lang=eng">Terms of Use</a>
        and <a href="https://www.exap.sa/beta/privacy-policy?lang=eng">Privacy Poilcy</a>
    </string>
    <string name="profile_header">Profile</string>
    <string name="add_photo">Add Photo</string>
    <string name="name_hint">Name</string>
    <string name="dob_hint">DOB</string>
    <string name="gender_hint">Gender</string>
    <string name="email_id_hint">Email ID</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="save_btn">Save</string>
    <string name="register_btn">Register</string>
    <string name="alert_please_enter_name">Please enter name</string>
    <string name="alert_please_enter_age">Please enter age</string>
    <string name="alert_please_enter_valid_age">Please enter valid age</string>
    <string name="alert_please_enter_gender">Please enter gender</string>
    <string name="alert_please_enter_email_id">Please enter email id</string>
    <string name="alert_please_valid_email_id">Please enter valid email id</string>
    <string name="alert_please_enter_password">Please enter password</string>
    <string name="alert_please_confirm_password">Please enter confirm password</string>
    <string name="alert_password_not_match">password not match</string>
    <string name="connect_with_facebook_btn">Facebook</string>
    <string name="connect_with_twitter_btn">Twitter</string>
    <string name="or">or</string>
    <string name="connect_with">Connect with</string>
    <string name="username_hint">Username</string>
    <string name="password_sign_in_hint">Password</string>
    <string name="login_btn">Login</string>
    <string name="not_yet_registered">Not yet Registered?</string>
    <string name="register_now">Register Now!</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="verify_your_phone">Verify your Phone Number</string>
    <string name="verify_from_mail"><u>Verify from  mail</u></string>
    <string name="enter_your_phone_number_hint">Enter your Phone Number</string>
    <string name="send_confirmation_code">Send Confirmation Code</string>
    <string name="enter_confirmation_code">Enter Confirmation Code</string>
    <string name="enter_code_hint">Enter Code</string>
    <string name="create_profile">Create Profile</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="name">MD Razak</string>
    <string name="age_city">29F | Dubai</string>
    <string name="menu_alert">Alerts &amp; Messages</string>
    <string name="menu_near_by">Near BY</string>
    <string name="menu_wallet">Pocket</string>
    <string name="menu_interest">Interest</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_following">Following</string>
    <string name="menu_home">Home</string>
    <string name="menu_setting">Settings</string>
    <string name="interest_screen_title">Interests</string>
    <string name="select_interest">Select Interests</string>
    <string name="menu_check">Check</string>
    <string name="btn_text">Ok</string>
    <string name="btn_notification">Notifications</string>
    <string name="btn_message">Messages</string>
    <string name="alert_screen_title">Alerts</string>
    <string name="uname_pwd_not_match">The username and password do not match.</string>
    <string name="sms_verification_error">The SMS verification code you entered is not correct</string>
    <string name="action_settings">Settings</string>
    <string name="setting_screen_title">Settings</string>
    <string name="location_service">Location Services</string>
    <string name="notification_range">Notification Range</string>
    <string name="push_alert">Push Alerts</string>
    <string name="message_alert">Message Alerts</string>
    <string name="deal_expiry_alert">Deal Expiry Alerts</string>
    <string name="txt_change_currency">Change Currency</string>
    <string name="txt_edit_profile">Edit Profile</string>
    <string name="txt_edit_payment_details">Edit Payment Details</string>
    <string name="txt_redefine_exp">REDEFINING YOUR SHOPPING EXPERIENCE</string>
    <string name="txt_english">English</string>
    <string name="txt_arabic">العربية</string>
    <string name="txt_signout">Sign Out</string>
    <string name="txt_change_language">Change Language</string>
    <string name="sar">SAR</string>
    <string name="payment_header">Payment</string>
    <string name="payment">Payment</string>
    <string name="hint_card_no">Card No.</string>
    <string name="hint_name_on_card">Name on the Card</string>
    <string name="hint_mm_yy">MM / YY</string>
    <string name="hint_mm">MM</string>
    <string name="hint_yy">YYYY</string>
    <string name="hint_ccv">CVV</string>
    <string name="btn_pay_usd">Pay USD</string>
    <string name="btn_save">Save</string>
    <string name="chk_remember_me">Remember Me</string>
    <string name="visa">Visa</string>
    <string name="master_card">Master Card</string>
    <string name="title_payment_pop_up">Payment Details</string>
    <string name="lbl_order_total">Order Total</string>
    <string name="lbl_quantity">1 Quantity</string>
    <string name="btn_pay_now">PAY NOW</string>
    <string name="payment_terms_and_condition">By pay, you agree to EXAP\'s</string>
    <string name="alert_please_select_credit_card">Please select credit card</string>
    <string name="alert_please_enter_card_number">Please enter card number</string>
    <string name="alert_please_enter_cardholder_name">Please enter cardholder name</string>
    <string name="alert_please_enter_month">Please enter month</string>
    <string name="alert_please_enter_year">Please enter year</string>
    <string name="alert_please_enter_cvv">Please enter CVV</string>
    <string name="alert_please_select_terms_and_condition">Please select terms &amp; conditions</string>
    <string name="alert_please_try_again_transaction">Please try again transaction.</string>
    <string name="alert_processing">Processing...</string>
    <string name="alert_invalid_transaction">Invalid Transaction.</string>
    <string name="alert_transaction_failed">Transaction failed</string>
    <string name="alert_charged">Charged</string>
    <string name="alert_preparing">Preparing...</string>
    <string name="alert_please_enter_valid_details">Please enter valid details</string>
    <string name="favorite_screen_title">Favorites</string>
    <string name="auto">Auto</string>
    <string name="forget_password_header">Forget Password</string>
    <string name="enter_your_email_id_hint">Enter your email id</string>
    <string name="submit_btn">Submit</string>
    <string name="get_password_btn">Get Password</string>
    <string name="verification_msg">By tapping next above, EXAP will send you a SMS message to confirm your phone number and you agree to our</string>
    <string name="categories_title">Categories</string>
    <string name="following_screen_title">Following</string>
    <string name="txt_followers">Followers</string>
    <string name="txt_downloads">Purchased</string>
    <string name="txt_active_coupons">Active Coupons</string>
    <string name="btn_follow_this_partner">Follow this Partner</string>
    <string name="btn_unfollow_this_partner">UnFollow this Partner</string>
    <string name="txt_featured">Featured</string>
    <string name="txt_end_date">End Date</string>
    <string name="txt_views">Views</string>
    <string name="txt_distance">Distance</string>
    <string name="txt_filter_distance_unit_km">KM</string>
    <string name="txt_slash">/</string>
    <string name="txt_filter_distance_unit_miles">Miles</string>
    <string name="txt_discount">Discount</string>
    <string name="txt_low_to_high">Low To High</string>
    <string name="txt_high_to_low">High To Low</string>
    <string name="txt_sooner_to_later">Sooner To Later</string>
    <string name="txt_later_to_sooner">Later To Sooner</string>
    <string name="nearby_screen_title">Near By</string>
    <string name="all">All</string>
    <string name="ok">Ok</string>
    <string name="txt_off">off</string>
    <string name="btn_reedme">Redeem</string>
    <string name="title_activity_store_details">Map</string>
    <string name="txt_store_online">IN STORE AND ONLINE</string>
    <string name="txt_store_dis">libero eu sed rhoncus varius, metus nulla ruturm magna, sed rhoncus  augue lectus porttitor nisi.</string>
    <string name="txt_discount_per">Discount</string>
    <string name="txt_store_price">Buy now</string>
    <string name="txt_cutomer_review">Customer Review</string>
    <string name="txt_term_condition"><![CDATA[Term &Conditions]]></string>
    <string name="txt_time_left">10D 22H 38M</string>
    <string name="title_activity_coupon_details">Coupon</string>
    <string name="btn_rate">Rate this Coupon</string>
    <string name="btn_buy">Buy Online</string>
    <string name="txt_coupon_code">Coupon Code</string>
    <string name="title_activity_rate_coupon">Map</string>
    <string name="title_activity_buy_coupon">Map</string>
    <string name="txt_buy">Buy</string>
    <string name="txt_at_the_rate_of">\@</string>
    <string name="redeemed">Redeemed</string>
    <string name="sold_out">Sold Out</string>
    <string name="day_notation">D</string>
    <string name="hour_notation">H</string>
    <string name="month_notation">M</string>
    <string name="post_your_feedback_header">Post your feedback</string>
    <string name="write_your_comments_hint">Write your comments...</string>
    <string name="post_comments_btn">Post Comments</string>
    <string name="cancel_btn">Cancel</string>
    <string name="title_activity_org_splash">OrgSplashActivity</string>
    <string name="title_custom_feedback">Customer Feedbacks</string>
    <string name="its_great_to_save_money">It is Great! to save money</string>
    <string name="skip_right">Skip</string>
    <string name="skip_left">ع</string>
</resources>