<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_item_alert"
            android:icon="@drawable/add_icon"
            android:title="@string/menu_alert" />
        <item
            android:id="@+id/nav_item_near_by"
            android:icon="@drawable/gender_icon"
            android:title="@string/menu_near_by" />

        <item
            android:id="@+id/nav_item_wallet"
            android:icon="@drawable/add_icon"
            android:title="@string/menu_wallet" />
        <item
            android:id="@+id/nav_item_interest"
            android:checked="true"
            android:icon="@drawable/gender_icon"
            android:title="@string/menu_interest"
            app:actionLayout="@layout/custom_nav_row"/>

        <item
            android:id="@+id/nav_item_favorite"
            android:icon="@drawable/gender_icon"
            android:title="@string/menu_favorite" />
        <item
            android:id="@+id/nav_item_following"
            android:icon="@drawable/gender_icon"
            android:title="@string/menu_following" />
        <item
            android:id="@+id/nav_item_categories"
            android:icon="@drawable/gender_icon"
            android:title="@string/menu_categories" />
        <item
            android:id="@+id/nav_item_settings"
            android:icon="@drawable/gender_icon"
            android:title="@string/menu_setting" />


    </group>

</menu>