<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">


    <com.deal.exap.customviews.MyTextViewSemi16
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:text="@string/forget_password_header"
        android:textColor="@color/black" />


    <com.deal.exap.customviews.MyEditTextViewReg
        android:id="@+id/edt_enter_email_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:background="@drawable/edt_txt_gray_bcg_shape"
        android:hint="@string/enter_your_email_id_hint"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:minEms="10"
        android:padding="10dp"
        android:singleLine="true" />


    <com.deal.exap.customviews.MyButtonViewSemi
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/btn_color"
        android:text="@string/submit_btn"
        android:textColor="@color/white" />

    <com.deal.exap.customviews.MyTextViewReg12
        android:id="@+id/txt_verify_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/verification_msg" />
</LinearLayout>