<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:focusable="false"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"

        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        tools:context=".LoginActivity">

        <com.deal.exap.customviews.MyTextViewReg14
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="7dp"
            android:text="@string/connect_with"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/facebook_btn_color"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/_facebook_white_icon" />

                <com.deal.exap.customviews.MyTextViewRegCustom
                    android:id="@+id/btn_facebook_login"
                    style="@style/tv_normal"
                    android:layout_marginLeft="10dp"
                    android:text="@string/connect_with_facebook_btn"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@color/twitter_btn_color"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/_twitter_white_icon" />

                <com.deal.exap.customviews.MyTextViewRegCustom
                    android:id="@+id/btn_twitter_login"
                    style="@style/tv_normal"
                    android:layout_marginLeft="10dp"
                    android:text="@string/connect_with_twitter_btn"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>

        <com.deal.exap.customviews.MyTextViewReg14
            android:id="@+id/txt_or"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="7dp"
            android:text="@string/or"
            android:textColor="@color/black" />


        <com.deal.exap.customviews.MyEditTextViewReg
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edt_txt_gray_bcg_shape"
            android:drawableLeft="@drawable/user_icon_dark"
            android:drawablePadding="10dp"
            android:hint="@string/username_hint"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:minEms="10"
            android:singleLine="true" />

        <com.deal.exap.customviews.MyEditTextViewReg
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@drawable/edt_txt_gray_bcg_shape"
            android:drawableLeft="@drawable/lock_icon_dark"
            android:drawablePadding="10dp"
            android:hint="@string/password_hint"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLength="10"
            android:minEms="10"
            android:singleLine="true" />

        <com.deal.exap.customviews.MyButtonViewSemi
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@color/btn_color"
            android:text="@string/login_btn"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.deal.exap.customviews.MyTextViewReg12

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_yet_registered"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <com.deal.exap.customviews.MyTextViewReg12
                android:id="@+id/txt_sign_up_click"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="@string/register_now"
                android:textColor="@color/toolbar_color"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>