<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent_10"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.deal.exap.customviews.MyTextViewReg16
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".6"
            android:background="@drawable/txt_outer_border_grey"
            android:drawableLeft="@drawable/nav_categories_icon"
            android:padding="10dp"
            android:text="@string/txt_selcted_category" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@color/strip_bg_color"></View>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="10dp">

        <com.deal.exap.customviews.MyTextViewReg14
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/txt_distance" />

        <Switch
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight=".7"
            android:textColor="@color/white"
            android:textOff="@string/txt_low_to_high"
            android:textOn="@string/txt_high_to_low"
            android:textSize="14sp"
            android:textStyle="bold"
            android:thumb="@drawable/custom_switch_semirounded"
            android:track="@drawable/custom_track" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="10dp">

        <com.deal.exap.customviews.MyTextViewReg14
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/txt_discount" />

        <Switch
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight=".7"
            android:textColor="@color/white"
            android:textOff="@string/txt_low_to_high"
            android:textOn="@string/txt_high_to_low"
            android:textSize="14sp"
            android:textStyle="bold"
            android:thumb="@drawable/custom_switch_semirounded"
            android:track="@drawable/custom_track" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="10dp">

        <com.deal.exap.customviews.MyTextViewReg14
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/txt_end_date" />

        <Switch
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight=".7"
            android:textColor="@color/white"
            android:textOff="@string/txt_low_to_high"
            android:textOn="@string/txt_high_to_low"
            android:textSize="14sp"
            android:textStyle="bold"
            android:thumb="@drawable/custom_switch_semirounded"
            android:track="@drawable/custom_track" />


    </LinearLayout>


</LinearLayout>
