<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_verification_one"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">


    <com.deal.exap.customviews.MyTextViewSemi16
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:text="@string/verify_your_phone"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp">

        <com.deal.exap.customviews.MyTextViewReg14
            android:id="@+id/edt_contry_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:background="@drawable/edt_txt_gray_bcg_shape"
            android:drawableRight="@drawable/selec_icon"
            android:gravity="center_vertical"
            android:hint="@string/country_code_hint"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/black" />

        <com.deal.exap.customviews.MyEditTextViewReg
            android:id="@+id/edt_phone_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_weight=".7"
            android:background="@drawable/edt_txt_gray_bcg_shape"
            android:gravity="center_vertical"
            android:hint="@string/enter_your_phone_number_hint"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="10"
            android:minEms="10"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="14sp" />

    </LinearLayout>

    <com.digits.sdk.android.DigitsAuthButton
        android:id="@+id/auth_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <com.deal.exap.customviews.MyButtonViewSemi
        android:id="@+id/btn_send_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/btn_color"
        android:text="@string/send_confirmation_code"
        android:textColor="@color/white" />


</LinearLayout>